selfhost/test/typechecker/binary/shl_error.4.abra
val a: Int? = None

a << 1